mengubah link ke 3 jadi test

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<ul>
 				<li><a href="#">wish</a></li>
 				<li><a href="#">gift</a></li>
-				<li><a href="#">products</a></li>
+				<li><a href="#">test</a></li>
 				<li><a href="#">services</a></li>
 				<li><a href="#">contact</a></li>
 
